Adiciona suporte para interceptors que podem alterar os detalhes da requisicao http, e cria interceptor que adiciona cabecalho de autenticacao basic